--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "svelte-storybook-performance-repro",
 	"version": "0.0.1",
+	"packageManager": "pnpm@8.15.1+sha1.8adba2d20330c02d3856e18c4eb3819d1d3ca6aa",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run prepack",
