--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
+		"module": "ESNext",
+		"moduleResolution": "bundler",
     "baseUrl": ".",
     "paths": {
       "$lib": ["./src/lib"],
